# SetupUtil

./: .gitignore  README.md  example_config.json  pyproject.toml
example_configs/: ComfyUI_Face_IPAdapters_RealisticVision.json  ComfyUI_IPAdapters_SD15.json  ComfyUI_InstantID_TurboVision.json  ComfyUI_SUPIR_models.json  ComfyUI_StableCascade.json  ComfyUI_playground_25.json  civitai_test.json  example_config.json
setup_scripts/: banner.py  load_models_from_huggingface.py  main.py  questionary_option.py
src/setup_util/: load_models_from_civitai.py  load_models_from_huggingface.py  main.py
