# pyproject.toml

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "setup_util"
version = "0.1.1"
description = "A CLI application for common setup tasks required for Stable Diffusion"
readme = "README.md"
authors = [{ name = "RedDeltas"}]
dependencies = [
    "huggingface_hub[hf_transfer] >= 0.21.3",
    "requests >= 2.31.0",
    "tqdm"
]

[project.scripts]
setup_util = "setup_util.main:main"